k8s-manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: hellogo
  name: hellogo
  namespace: hellogo-dev
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    run: hellogo
  sessionAffinity: None
  type: NodePort
