k8s-manifests/hellogo-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    run: hellogo
  name: hellogo
  namespace: hellogo-dev
spec:
  host: hellogo-hellogo-dev.apps-crc.testing
  port:
    targetPort: 3000
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: hellogo
    weight: 100
  wildcardPolicy: None
